--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* index.css */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,8 +28,9 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 100vw; /* Ensure the page uses complete width */
   min-height: 100vh;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 h1 {
