--- a/src/App.css
+++ b/src/App.css
@@ -4,38 +4,32 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh; /* Ensure the body takes up the full viewport height */
 }
 
 .app {
-  flex: 1; /* Allow the app container to grow to fill the remaining space */
   max-width: 100%;
   margin: 0 auto;
   padding: 20px;
 }
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 20px;
 }
 
-header img {
+.logo img {
   width: 40px;
-  margin-right: 10px;
 }
 
-header h1 {
+.title h1 {
   font-size: 24px;
-  font-weight: bolder;
-  color: #040404;
+  font-weight: bold;
 }
 
 .image-gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
 }
 
@@ -52,11 +46,24 @@ header h1 {
   border-radius: 10px 10px 0 0;
 }
 
-.author {
-  padding: 15px;
-  background-color: #f5f5f5;
-  font-size: 14px;
-  border-radius: 0 0 10px 10px;
+.grid-item:nth-child(1) {
+  grid-area: 1 / 1 / 7 / 8; /* Spanning rows 1 to 6 and columns 1 to 7 */
+}
+
+.grid-item:nth-child(2) {
+  grid-area: 1 / 8 / 4 / 11; /* Spanning rows 1 to 3 and columns 8 to 10 */
+}
+
+.grid-item:nth-child(3) {
+  grid-area: 4 / 8 / 7 / 11; /* Spanning rows 4 to 6 and column 8 to 10 */
+}
+
+.grid-item:nth-child(4) {
+  grid-area: 7 / 1 / 11 / 6; /* Spanning rows 7 to 10 and columns 1 to 5 */
+}
+
+.grid-item:nth-child(5) {
+  grid-area: 7 / 6 / 11 / 11; /* Spanning rows 7 to 10 and columns 6 to 10 */
 }
 
 .load-more {
